add Base Html/css

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.min.css">
+    <link rel="stylesheet" href="./css/header.min.css">
+    <link rel="stylesheet" href="./css/globalStyles.min.css">
+    <link rel="stylesheet" href="./css/filter.min.css">
+    <link rel="stylesheet" href="./css/dropDown.min.css">
     <title>HealthSphere</title>
+
 </head>
 
 <body>
-
+    @@include("html/header.html",{})
+    @@include("html/filter.html",{})
+    @@include("html/main.html",{})
 </body>
 
 </html>
+<link rel="stylesheet" href="./css/globalStyles.min.css">
