test version page "login"

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/globalStyles.min.css">
     <link rel="stylesheet" href="./css/filter.min.css">
     <link rel="stylesheet" href="./css/dropDown.min.css">
+    <link rel="stylesheet" href="./css/login.min.css">
     <title>HealthSphere</title>
 
 </head>
@@ -18,7 +19,7 @@
     @@include("html/header.html",{})
     @@include("html/filter.html",{})
     @@include("html/main.html",{})
+    @@include("html/loginForm.html", {})
 </body>
-
+<script src="../js/app.min.js" defer></script>
 </html>
-<link rel="stylesheet" href="./css/globalStyles.min.css">
