--- a/src/html/loginForm.html
+++ b/src/html/loginForm.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
     <title>Login</title>
 </head>
 
@@ -14,14 +13,14 @@
         <h2>Login</h2>
         <form>
             <div class="user-box">
-                <input type="text" name="" required="">
+                <input type="email" name="username" id='username' required="">
                 <label>Username</label>
             </div>
             <div class="user-box">
-                <input type="password" name="" required="">
+                <input type="password" name="password" id="password" required="">
                 <label>Password</label>
             </div>
-            <a href="#">
+            <a href="#" class="sub">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -30,6 +29,6 @@
             </a>
         </form>
     </div>
+    <div class="vacuum">No items have been added.</div>
 </body>
-
 </html>
