add search script

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
     @@include("html/header.html",{})
     @@include("html/filter.html",{})
     @@include("html/main.html",{})
+
+
+        <script src="js/app.js"></script>
 </body>
 
 </html>
