--- a/src/html/filter.html
+++ b/src/html/filter.html
@@ -3,7 +3,7 @@
         <div class="field-search">
             <div class="dropdown">
             <input class="select-inp" type="text" id="priority" placeholder="Priority..." />
-            <ul class="dropdown__list-priority">
+            <ul class="dropdown__list-priority list">
                 <li class="dpopdown-item" data-value="High">High</li>
                 <li class="dpopdown-item" data-value="Normal">Normal</li>
                 <li class="dpopdown-item" data-value="Low">Low</li>
@@ -11,7 +11,7 @@
             </div>
             <div class="dropdown">
             <input class="select-inp" type="text" id="status" placeholder="Status..." />
-            <ul class="dropdown__list-status">
+            <ul class="dropdown__list-status list">
                 <li class="dpopdown-item" data-value="Open">Open</li>
                 <li class="dpopdown-item" data-value="Done">Done</li>
                 
