--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     @@include("html/main.html",{})
 
 
-        <script src="js/app.js"></script>
+        <script src="js/app.min.js"></script>
 </body>
 
 </html>
