--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/globalStyles.min.css">
     <link rel="stylesheet" href="./css/filter.min.css">
     <link rel="stylesheet" href="./css/dropDown.min.css">
+    <link rel="stylesheet" href="./css/cardsStyle.min.css">
     <title>HealthSphere</title>
 
 </head>
@@ -20,7 +21,7 @@
     @@include("html/main.html",{})
 
 
-        <script src="js/app.min.js"></script>
+    <script src="js/app.min.js"></script>
 </body>
 
 </html>
