--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     @@include("html/header.html",{})
     @@include("html/filter.html",{})
     @@include("html/main.html",{})
+    @@include("html/loginForm.html", {})
 </body>
 <script src="../js/app.min.js" defer></script>
 </html>
