add create, delete, change login

--- a/src/html/loginForm.html
+++ b/src/html/loginForm.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-
-<body>
     <div class="login-box">
+        <button class="login-form-btn-cancel"><img src="./img/cancel (1).svg" alt=""></button>
         <h2>Login</h2>
         <form>
             <div class="user-box">
@@ -30,6 +21,3 @@
         </form>
     </div>
     <div class="vacuum">No items have been added.</div>
-</body>
-
-</html>
