--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/dropDown.min.css">
     <link rel="stylesheet" href="./css/login.min.css">
     <link rel="stylesheet" href="./css/cardsStyle.min.css">
+    <link rel="stylesheet" href="./css/create.min.css">
     <title>HealthSphere</title>
 
 </head>
@@ -21,6 +22,7 @@
     @@include("html/filter.html",{})
     @@include("html/main.html",{})
     @@include("html/loginForm.html", {})
+    @@include("html/create.html", {})
 </body>
 <script src="../js/app.min.js" defer></script>
 </html>
