connect render and search functions

--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,5 @@
     @@include("html/main.html",{})
     @@include("html/loginForm.html", {})
 </body>
-<script src="../js/app.min.js" defer></script>
+<script src="./js/app.min.js" defer></script>
 </html>
