add changes into styles

--- a/src/html/filter.html
+++ b/src/html/filter.html
@@ -1,4 +1,4 @@
-     <div>
+     <div class="filter-container">
     
         <form class="field-search">
             <div class="dropdown-search">
