--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/filter.min.css">
     <link rel="stylesheet" href="./css/login.min.css">
     <link rel="stylesheet" href="./css/cardsStyle.min.css">
+    <link rel="stylesheet" href="./css/create.min.css">
     <title>HealthSphere</title>
 
 </head>
@@ -20,6 +21,7 @@
     @@include("html/filter.html",{})
     @@include("html/main.html",{})
     @@include("html/loginForm.html", {})
+    @@include("html/create.html", {})
 </body>
 <script src="./js/app.min.js" defer></script>
 </html>
