add delete and correct create

--- a/src/html/create.html
+++ b/src/html/create.html
@@ -5,9 +5,9 @@
         <form action="#" class="form-box">
                 <select name="doctor" class="user-box" id="doctor" required="required">
                     <option value=" ">Doctor</option>
-                    <option value="dentist">Стоматолог</option>
-                    <option value="cardiologist">Кардіолог</option>
-                    <option value="therapist">Терапевт</option>
+                    <option value="Dentist">Стоматолог</option>
+                    <option value="Cardiologist">Кардіолог</option>
+                    <option value="Therapist">Терапевт</option>
                 </select>
                 <select name="urgency" class="user-box" id="urgency" required="required">
                     <option value=" ">Priority</option>
