--- a/src/html/create.html
+++ b/src/html/create.html
@@ -10,7 +10,7 @@
                     <option value="Therapist">Терапевт</option>
                 </select>
                 <select name="urgency" id="urgency" required="required">
-                    <option value="high">High</option>
+                    <option value="hight">High</option>
                     <option value="normal">Normal</option>
                     <option value="low">Low</option>
                 </select>
@@ -23,11 +23,11 @@
                 <input type="text" class="" name="purpose" id="purpose" placeholder="Мета візиту">
                 <input type="text" class="" name="description" id="description" placeholder="Короткий опис візиту">
                 <input type="text" class="" name="name" id="name" placeholder="ПІБ">
+                <input type="date" class="" name="date" id="date" placeholder="Дата останнього відвідування">
                 <input type="number" class="" name="pressure" id="pressure" placeholder="Звичайний тиск">
                 <input type="number" class="" name="index" id="index" placeholder="Індекс маси тіла">
                 <input type="text" class="" name="disease" id="disease" placeholder="Перенесені захворювання">
                 <input type="number" class="" name="age" id="age" placeholder="Вік">
-                <input type="date" class="" name="date" id="date" placeholder="Дата останнього відвідування">
             </div>
             <div class="create-form-btn-container">
                 <button class="add btn-add-form-create">
