--- a/src/html/loginForm.html
+++ b/src/html/loginForm.html
@@ -3,7 +3,7 @@
     <h2>Login</h2>
     <form>
         <div class="user-box">
-            <input type="email" name="username" id='username' required="">
+            <input type="text" name="username" id='username' required="" autocomplete="off">
             <label>Username</label>
         </div>
         <div class="user-box">
