--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     @@include("html/header.html",{})
     @@include("html/filter.html",{})
     @@include("html/main.html",{})
-    @@include("html/loginForm.html", {})
+    <div class="vacuum">No items have been added.</div>
 </body>
 <script src="./js/app.min.js" defer></script>
 </html>
