--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/login.min.css">
     <link rel="stylesheet" href="./css/cardsStyle.min.css">
     <link rel="stylesheet" href="./css/create.min.css">
+    <link rel="icon" href="./img/Subtract.svg" type="image/x-icon">
     <title>HealthSphere</title>
 
 </head>
