--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,8 +2,9 @@
     <div class="container header-container">
         <a href=""><img src="@img/Subtract.svg" alt="">HealthSphere</a>
         <div class="header-btn-box">
-            <span class='pulse-button'>Create</span>
-            <input type="button" value="Login" class="login" />
+            <button class='pulse-button'>Create</button>
+            <button class="login">Login</button>
+            <button class="registration">Registration</button>
         </div>
     </div>
 </header>
