add validation in form edit and create

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container header-container">
-        <a href=""><img src="@img/Subtract.svg" alt="">HealthSphere</a>
+        <a href=""><img src="@img/Subtract.svg" alt="">Patient's office</a>
         <div class="header-btn-box">
             <button class='pulse-button'>Create</button>
             <button class="login">Login</button>
